added pacman game

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h1>Gallery</h1>
 <body>
-This will hold links to all my games.
+<a href="pacman/pacman.html">Pacman Game!</a>
 </body>
 
 </html>
