added extra points for winning and a how to play section

--- a/pacman/pacman.html
+++ b/pacman/pacman.html
@@ -7,6 +7,17 @@
 
 <h2>PacMan</h2>
 <canvas id="game" width="500" height="500"></canvas>
+<div id="rules">
+    <h3 align="center">How To Play </h3>
+    <ul >
+        <li>To start/restart the game press spacebar.</li>
+        <li>To win the game you must do two things.</li>
+        <li>Get all the dots</li>
+        <li>Trap at least 1 ghost into the center box at any point.</li>
+        <li>Avoid the Ghosts!</li>
+
+    </ul>
+</div>
 <h2 id="score">Score: 0</h2>;
 
 <script type="text/javascript" src="engine.js"></script>
