--- a/pacman/pacman.html
+++ b/pacman/pacman.html
@@ -11,6 +11,7 @@
     <h3 align="center">How To Play </h3>
     <ul >
         <li>To start/restart the game press spacebar.</li>
+        <li>Use the arrow keys to move pacman. </li>
         <li>To win the game you must do two things.</li>
         <li>Get all the dots</li>
         <li>Trap at least 1 ghost into the center box at any point.</li>
