fixed final level of platformer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <h1>Gallery</h1>
 <body>
 <a href="pacman/pacman.html">Pacman Game!</a>
+<br>
+<a href="platformer/index.html">Platformer Project 2</a>
 </body>
 
 </html>
