--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <a href="pacman/pacman.html">Pacman Game!</a>
 <br>
 <a href="platformer/index.html">Platformer Project 2</a>
+<br>
+<a href="astar/asearch.html">A* Search</a>
 </body>
 
 </html>
