--- a/astar/asearch.html
+++ b/astar/asearch.html
@@ -19,7 +19,7 @@ e e o o e e e e e
 e e e e e e e e e
 e e e e o o e e g</textarea>
     <button type="button" id="submit" text="submit">Submit</button>
-    <h3 id = "stat">Final Length: 0 </h3>
+    <h3 id = "stat">Final Length: 0 Steps: 0</h3>
     <button type="button" id="speedup">Faster</button>
     <button type="button" id="slowdown">Slower</button>
     <button type="button" id="h1">Hueristic Original</button>
