added to main page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <a href="platformer/index.html">Platformer Project 2</a>
 <br>
 <a href="astar/asearch.html">A* Search</a>
+<br>
+<a href="test/index.html">Final Project</a>
 </body>
 
 </html>
